<resources>
    <string name="app_name">PracticaASM</string>
    <string name="tutorial_text_1">Be in touch</string>
    <string name="tutorial_text_2">Networking</string>
    <string name="tutorial_text_3">Learn</string>
    <string name="user_email">sandra.adams@email.com</string>
    <string name="user_password">123456</string>
    <string name="navigation_drawer_open">News</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="error_text_1">UPS... couldn\'t sign in.</string>
    <string name="error_text_2">Your username and password don\'t match.</string>
    <string name="error_text_3">Please try again.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="anonymous_user">ANONYMOUS USER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_profile">User profile</string>
    <string name="continue_anonymously">CONTINUE ANONYMOUSLY</string>
    <string name="main_title">News</string>
    <string name="menu_title">Dev Community</string>
    <string name="menu_news">News</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_events">Events</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_faqs">FAQS</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="answer_1" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="answer_2" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="answer_3" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="answer_4" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="menu_event_detail">Event Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
