<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login2_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginStart="50dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="83dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#7C7C7C"
            android:textColorHint="#7C7C7C" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#7C7C7C"
            android:textColorHint="#7C7C7C" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/SigninButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="#00BCD4"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/continueAnonymouslyButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="#9C9C9C"
            android:text="@string/continue_anonymously"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="190dp"
        android:layout_height="191dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2_toolbar"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/abc_vector_test"
        app:layout_constraintBottom_toBottomOf="@+id/login2_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>